[package]
name = "bib-convert"
version = "0.1.0"
edition = "2024"
description = "Convert .bib files into structured YAML, TOML, or JSON"
readme = "README.md"

[dependencies]
biblatex = { version = "0.12", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
